--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sgtm-same-origin-proxy",
+  "name": "sgtm-same-origin-proxy-cloudflare-worker",
   "version": "1.0.0",
   "description": "Cloudflare Worker for same-origin access to server-side Google Tag Manager",
   "main": "src/index.ts",
