--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,11 +4,10 @@
   "main": "src/index.ts",
   "compatibility_date": "2024-12-01",
 
-  // Environment variables (configure these in Cloudflare dashboard or .dev.vars for local dev)
-  "vars": {
-    "GTM_DOMAIN": "your-gtm-server.com",
-    "PATH_PREFIX": "/gtm/"
-  },
+  // Environment variables are configured in:
+  // - .dev.vars for local development (gitignored)
+  // - Cloudflare dashboard for production deployment
+  // Required vars: GTM_DOMAIN, PATH_PREFIX
 
   // Route configuration - update with your actual domain
   // Note: You'll need to configure this in the Cloudflare dashboard
